--- a/Me.ipynb
+++ b/Me.ipynb
@@ -491,6 +491,36 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Mcukr_sCZrID",
+        "outputId": "08faafba-4ee2-4356-899a-120fbb6c6e9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# test\n",
+        "from dgl import DGLGraph\n",
+        "import numpy as np\n",
+        "edges = torch.tensor([0, 1, 2, 3, 4, 5]), torch.tensor([1, 2, 3, 4, 5, 0])\n",
+        "weights = torch.tensor([0.1, 0.6, 0.9, 0.7, 0.3, 0.5])  # weight of each edge\n",
+        "print(edges)\n",
+        "print(weights)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(tensor([0, 1, 2, 3, 4, 5]), tensor([1, 2, 3, 4, 5, 0]))\n",
+            "tensor([0.1000, 0.6000, 0.9000, 0.7000, 0.3000, 0.5000])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "cj_IQeTUVnpS",
         "outputId": "4ea4ea8b-fd74-4736-947c-7d59238e432f",
         "colab": {
@@ -502,14 +532,18 @@
         "\n",
         "# 1. graph node(u>v) + weight of edges\n",
         "from dgl import DGLGraph\n",
-        "edges = torch.tensor([0, 1, 2, 3, 4, 5]), torch.tensor([1, 2, 3, 4, 5, 0])\n",
+        "edges = (torch.tensor([0, 1, 2, 3, 4, 5]), torch.tensor([1, 2, 3, 4, 5, 0]))\n",
         "weights = torch.tensor([0.1, 0.6, 0.9, 0.7, 0.3, 0.5])  # weight of each edge\n",
         "_g = DGLGraph(edges)\n",
         "_g.edata['w'] = weights  # give it a name 'w'\n",
         "\n",
         "# 2. Features of node\n",
-        "_features = torch.Tensor([[0,0.5,0.5,0.7,1,0,1,0.2,0.9,0.4],[1,0.5,0.5,0.2,1,1,0.2,0.5,1,0.8],[0.5,0.3,0.8,0.1,0,1,0.4,0.7,0.6,0.2],\n",
-        "          [0.8,0.2,0.1,1,1,0.7,0.1,0.1,0.1,0.6],[0,1,0.2,0.2,1,1,0.5,0.9,0.1,0.4],[0,1,0.5,0.1,0,1,0.9,0.2,0.4,0.5]])\n",
+        "_features = torch.Tensor([[0,0.5,0.5,0.7,1,0,1,0.2,0.9,0.4], \n",
+        "                          [1,0.5,0.5,0.2,1,1,0.2,0.5,1,0.8], \n",
+        "                          [0.5,0.3,0.8,0.1,0,1,0.4,0.7,0.6,0.2],\n",
+        "                          [0.8,0.2,0.1,1,1,0.7,0.1,0.1,0.1,0.6], \n",
+        "                          [0,1,0.2,0.2,1,1,0.5,0.9,0.1,0.4], \n",
+        "                          [0,1,0.5,0.1,0,1,0.9,0.2,0.4,0.5]])\n",
         "\n",
         "# 3. label (1=Food, 0=Not Food)\n",
         "_labels = torch.LongTensor([0,1,1,0,1,0])\n",
